# intern-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
askdata/: __init__.py  chat_session.py  cli.py
askdata/agent/: graph.py  llmclient.py  prompts.py  react_agent.py
askdata/api/: birdroutes.py  main.py  queryroutes.py  spiderroutes.py
askdata/app/: queryservice.py  sessionstore.py
askdata/bird/: birdloader.py  birdprep.py  evalrunner.py  evaluator.py  schemaindex.py
askdata/core/: config.py  errors.py
askdata/db/: engine.py  mysql_loader.py
askdata/schemas/: bird.py  query.py  semantic.py  spider.py  sql.py
askdata/skills/: __init__.py  compare-periods.md  rank-top-bottom.md  ratio-analysis.md
askdata/spider/: evaluator.py  schemaindex.py  spiderloader.py  spiderprep.py
askdata/tools/: chartbuilder.py  resultanalyzer.py  sqlexecutor.py  sqlvalidator.py
scripts/: geninstructions.py  setupbird.sh  smoketest.py
tests/: test_bird_evaluation.py  test_chat_session.py  test_prompts.py  test_react_agent.py
