[project]
name = "intern-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "httpx",
    "openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "sqlglot",
    "typer",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
askdata = "askdata.cli:Main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["askdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
